@@ -71,10 +71,6 @@
         </dependency>
         <dependency>
             <groupId>org.divy</groupId>
-            <artifactId>bo-framework-orika-mapper-spring</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.divy</groupId>
             <artifactId>bo-framework-database-jpa</artifactId>
         </dependency>
         <dependency>
@@ -172,7 +168,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --add-opens java.base/java.lang=orika.core
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         ${argLine}
                     </argLine>
